[gd_scene load_steps=3 format=3 uid="uid://cnldudaiwye06"]

[ext_resource type="Script" path="res://load_game.gd" id="1_huuhs"]
[ext_resource type="PackedScene" uid="uid://dyb8nb5ojb54d" path="res://background.tscn" id="1_muw7q"]

[node name="LoadGame" type="Node2D"]
script = ExtResource("1_huuhs")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_muw7q")]

[node name="New" type="Button" parent="."]
offset_left = 370.0
offset_top = 50.0
offset_right = 770.0
offset_bottom = 200.0
text = "New Game"

[node name="Load" type="Button" parent="."]
offset_left = 370.0
offset_top = 250.0
offset_right = 770.0
offset_bottom = 400.0
text = "Load Game"

[node name="Back" type="Button" parent="."]
offset_left = 370.0
offset_top = 450.0
offset_right = 770.0
offset_bottom = 600.0
text = "Go Back"

[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
